# observable

./: .gitignore  Cargo.toml  README.md
docs/: architecture.md
docs_markdown/: docs.neurosity.co_docs.md  docs.neurosity.co_docs_api_authentication_.md  docs.neurosity.co_docs_api_bluetooth-react-native_.md  docs.neurosity.co_docs_api_bluetooth-web_.md  docs.neurosity.co_docs_api_brainwaves_.md  docs.neurosity.co_docs_api_calm_.md  docs.neurosity.co_docs_api_device-selection_.md  docs.neurosity.co_docs_api_disconnect_.md  docs.neurosity.co_docs_api_focus_.md  docs.neurosity.co_docs_api_haptics_.md  docs.neurosity.co_docs_api_info_.md  docs.neurosity.co_docs_api_kinesis_.md  docs.neurosity.co_docs_api_oauth_.md  docs.neurosity.co_docs_api_osc_.md  docs.neurosity.co_docs_api_predictions_.md  docs.neurosity.co_docs_api_settings_.md  docs.neurosity.co_docs_api_signal-quality_.md  docs.neurosity.co_docs_api_status_.md  docs.neurosity.co_docs_api_streaming_.md  docs.neurosity.co_docs_api_v6_.md  docs.neurosity.co_docs_api_v7_.md  docs.neurosity.co_docs_guides_ethics_.md  docs.neurosity.co_docs_guides_importing_.md  docs.neurosity.co_docs_guides_signal_.md  docs.neurosity.co_docs_guides_training_.md  docs.neurosity.co_docs_overview_.md  docs.neurosity.co_docs_reference_.md  docs.neurosity.co_docs_reference_classes_bluetoothclient_.md  docs.neurosity.co_docs_reference_classes_neurosity_.md  docs.neurosity.co_docs_reference_classes_reactnativetransport_.md  docs.neurosity.co_docs_reference_classes_webbluetoothtransport_.md  docs.neurosity.co_docs_reference_interfaces_baseinfo_.md  (+42 more)
(+5 files in other folders)
