[package]
name = "observable"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
reqwest = { version = "0.12.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio-stream = "0.1.17"
dotenvy = "0.15.7"
futures = "0.3.31"
parquet = "54.0.0"
arrow = "54.0.0"
chrono = "0.4.39"
uuid = { version = "1.13.1", features = ["v4"] }
tokio-tungstenite = { version = "0.26.1", default-features = false, features = ["rustls-tls-native-roots"] }
